--- a/lib/css/principal.css
+++ b/lib/css/principal.css
@@ -100,6 +100,22 @@ header nav a{
 	padding-top: 30px;
 	padding-bottom: 0;
 }
+.interna{
+	padding-top: 20px;
+	border-top: 2px solid #181818;
+}
+
+.titulo-interna{
+	font-size: 36px;
+	border-bottom: 4px solid #181818;
+	padding-bottom: 20px;
+	margin-bottom: 20px;
+	margin-top: 20px;
+}
+
+.titulo-interna span{
+	color: #bb0a1a;
+}
 
 
 .chamadas-principais {
@@ -176,6 +192,18 @@ header nav a{
 	padding-bottom: 10px;
 }
 
+.titulo-noticia{
+	color: #bb0a1a;
+	font-size: 28px;
+	font-weight: bold;
+}
+
+.titulo-noticia span{
+	display: block;
+	font-size: 12px;
+	color: #ccc;
+}
+
 .not-detalhe h4{
 	font-size: 16px;
 	font-weight: bold;
@@ -193,10 +221,134 @@ header nav a{
 	font-weight: bold;
 }
 
+.texto{
+	display: block;
+	margin-bottom: 50px;
+}
+
 footer{
 	background: #191919;
 	color: #aeaeae;
 	font-size: 14px;
+}
+
+
+img[class*="align"], img[class*="wp-image-"], #content .gallery .gallery-icon img {
+    border: 1px solid #DDDDDD;
+    padding: 6px;
+
+    max-width: 840px;
+    height: auto !important;
+}
+.wp-caption img {
+    border-color: #EDEDED;
+}
+a:focus img[class*="align"], a:hover img[class*="align"], a:active img[class*="align"], a:focus img[class*="wp-image-"], a:hover img[class*="wp-image-"], a:active img[class*="wp-image-"], #content .gallery .gallery-icon a:focus img, #content .gallery .gallery-icon a:hover img, #content .gallery .gallery-icon a:active img {
+    background: none repeat scroll 0 0 #EEEEEE;
+    border-color: #BBBBBB;
+}
+.wp-caption a:focus img, .wp-caption a:active img, .wp-caption a:hover img {
+    background: none repeat scroll 0 0 #FFFFFF;
+    border-color: #DDDDDD;
+}
+.alignleft {
+    display: inline;
+    float: left;
+    margin-right: 1.625em;
+}
+.alignright {
+    display: inline;
+    float: right;
+    margin-left: 1.625em;
+}
+.aligncenter {
+    clear: both;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.wp-caption {
+    background-color: #FCFCFD;
+    border: 1px solid #F5F5F5;
+    padding-top: 4px;
+    text-align: center;
+ 
+}
+.wp-caption img {
+    border: 0 none;
+    margin: 0;
+    padding: 0;
+}
+.wp-caption p.wp-caption-text {
+    font-size: 11px;
+    line-height: 17px;
+    margin: 0;
+    padding: 0 4px 5px;
+}
+.wp-caption-text {
+    font-size: 11px;
+    font-style: italic;
+    margin: 0;
+    padding-bottom: 0;
+}
+
+
+.wpcf7-submit {
+    font-weight: 700;
+    border-radius: 40px;
+    background: none;
+    color: #3f3f3f;
+    box-shadow: none;
+    border: 2px solid #3f3f3f;
+    font-family: 'Montserrat', sans-serif;
+    padding: 0 65px 0 65px;
+    height: 50px;
+    line-height: 48px;
+    float: right;
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #666;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: #666;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #666;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: #666;
+}
+
+
+
+/** =Paginate links Styles
+ ******************************************* **/
+.page-numbers {
+    float: left;
+    margin-top: 10px;
+    width: 100%;
+}
+.page-numbers li {
+    display: inline-block;
+    margin-left: 3px;
+    border-radius: 50%;
+}
+.page-numbers a, .page-numbers .dots, .page-numbers .next, .page-numbers .prev {
+    padding: 6px 12px;
+    text-decoration: none;
+    border-radius: 40%;
+    border: 2px solid #3f3f3f;
+}
+.page-numbers a:hover, .page-numbers .next:hover, .page-numbers .prev:hover {
+    background: #666;
+	color:#fff;
+}
+.page-numbers .current {
+padding: 6px 12px;
+    border-radius: 40%;
+    border: 2px solid #2c4190;
+    color: #2c4190;
 }
 
 @media only screen and  (min-width:1150px){
